fix: hide scrollbar on about card text

--- a/styles/style.css
+++ b/styles/style.css
@@ -187,12 +187,18 @@ header {
     padding: 1rem;
 }
 
+.about-card-text-box::-webkit-scrollbar {
+    display: none;
+}
+
 .about-card-text-box {
     background-color: #fff;
     padding: 1rem;
     margin-bottom: 1rem;
     height: 390px;
-    overflow: scroll;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
 }
 
 .about-card-1 {
